--- a/index.html
+++ b/index.html
@@ -50,46 +50,46 @@
     </section>
 
     <section class="table">
-      <table>
+      <table >
         <thead>
           <tr>
-            <th>Sr. NO</th>
+            <th>SNO.</th>
             <th>StartUp Name</th>
             <th>StartUp Description</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>1</td>
-            <td>Lorem</td>
+            <td>1.</td>
+            <td>WowIndia</td>
             <td>A StartUp with WOW Ideas.</td>
           </tr>
           <tr>
-            <td>2</td>
-            <td>Lorem</td>
-            <td>Lorem Ipsum Text.</td>
+            <td>2.</td>
+            <td>Loreum Ipsum</td>
+            <td>Lorem Ipsum Text</td>
           </tr>
           <tr>
-            <td>3</td>
-            <td>Lorem</td>
-            <td>Lorem Ipsum Text.</td>
+            <td>3.</td>
+            <td>Loreum Ipsum</td>
+            <td>Lorem Ipsum Text</td>
           </tr>
           <tr>
-            <td>4</td>
-            <td>Lorem</td>
-            <td>Lorem Ipsum Text.</td>
+            <td>4.</td>
+            <td>Loreum Ipsum</td>
+            <td>Lorem Ipsum Text</td>
           </tr>
           <tr>
-            <td>5</td>
-            <td>Lorem</td>
-            <td>Lorem Ipsum Text.</td>
+            <td>5.</td>
+            <td>Loreum Ipsum</td>
+            <td>Lorem Ipsum Text</td>
           </tr>
         </tbody>
         <tfoot>
           <tr>
-            <td>00</td>
+            <td>00.</td>
             <td>Final Footer</td>
-            <td>Lorem Ipsum Text.</td>
+            <td>Lorem Ipsum Text</td>
           </tr>
         </tfoot>
       </table>
